Fix some alignment issues

--- a/client/app/less/game-text-field.less
+++ b/client/app/less/game-text-field.less
@@ -6,7 +6,7 @@
 .game-text-field {
 	position: absolute;
 	bottom: 0;
-	left: @brush-palette-width;
+	left: 0;
 	right: @game-panel-width;
 	display: flex;
 	align-items: center;
